# gsim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_releases.sh
cmake/: README.md  clang_toolchain.cmake  cmake-kits.json  gcc_analyze.cmake
hardware_stats/: CMakeLists.txt
map/: README.md  eck.geojson  eck.json  generate_map.py  obo.geojson  obo.json  query.txt  test_map.json
position_validation/: CMakeLists.txt  build.sh
position_validation/src/: main.cpp
shader_validation/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/sim/: CMakeLists.txt  Config.cpp  Config.hpp  Constants.hpp  Entity.cpp  Entity.hpp  Events.cpp  Events.hpp  GpuAlgorithm.hpp  GpuBuffer.hpp  GpuQuadTree.cpp  GpuQuadTree.hpp  Map.cpp  Map.hpp  Metadata.cpp  Metadata.hpp  PipeConnector.cpp  PipeConnector.hpp  PushConsts.cpp  PushConsts.hpp  Simulator.cpp  Simulator.hpp
src/sim/shader/: CMakeLists.txt  accelerator.comp  accelerator_gui.comp  random_move.comp  standalone.comp
src/sim/shader/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
src/ui/: CMakeLists.txt  UiContext.cpp  UiContext.hpp
src/ui/resources/: CMakeLists.txt
src/ui/widgets/: CMakeLists.txt  SimulationOverlayWidget.cpp  SimulationSettingsBarWidget.cpp  SimulationWidget.cpp  SimulationWidget.hpp
src/ui/widgets/opengl/: AbstractGlObject.cpp  BlurGlObject.cpp  CMakeLists.txt  EntityGlObject.cpp  EntityGlObject.hpp  MapGlObject.cpp  QuadTreeGridGlObject.cpp  QuadTreeGridGlObject.hpp  ScreenSquareGlObject.cpp
src/ui/widgets/opengl/fb/: CMakeLists.txt
src/ui/widgets/opengl/utils/: CMakeLists.txt
src/ui/windows/: CMakeLists.txt  MainWindow.cpp
src/utils/: CMakeLists.txt  RNG.cpp  RNG.hpp  TickDurationHistory.cpp  TickDurationHistory.hpp  TickRate.cpp  TickRate.hpp  Timer.cpp  Timer.hpp
