cmake_minimum_required(VERSION 3.16)

add_library(logger Logger.cpp)
target_link_libraries(logger PUBLIC spdlog::spdlog)

if(${GSIM_LOG_LEVEL} STREQUAL Trace)
    set (GSIM_LOG_LEVEL TRACE)
    message(STATUS "Using log level Trace")
elseif(${GSIM_LOG_LEVEL} STREQUAL Debug)
    set (GSIM_LOG_LEVEL DEBUG)
    message(STATUS "Using log level Debug")
elseif(${GSIM_LOG_LEVEL} STREQUAL Info)
    set (GSIM_LOG_LEVEL INFO)
    message(STATUS "Using log level Info")
elseif(${GSIM_LOG_LEVEL} STREQUAL Warn)
    set (GSIM_LOG_LEVEL WARN)
    message(STATUS "Using log level Warn")
elseif(${GSIM_LOG_LEVEL} STREQUAL Error)
    set (GSIM_LOG_LEVEL ERROR)
    message(STATUS "Using log level Error")
elseif(${GSIM_LOG_LEVEL} STREQUAL Critical)
    set (GSIM_LOG_LEVEL CRITICAL)
    message(STATUS "Using log level Critical")
elseif(${GSIM_LOG_LEVEL} STREQUAL Off)
    set (GSIM_LOG_LEVEL OFF)
    message(STATUS "Using log level Off")
else()
    if((NOT ${GSIM_LOG_LEVEL} STREQUAL Default) AND (NOT GSIM_LOG_LEVEL STREQUAL ""))
        message(WARNING "Log level '${GSIM_LOG_LEVEL}' unknown, use -DGSIM_LOG_LEVEL=[Trace, Debug, Info, Warn, Error, Critical, Off, Default]")
    endif()
    set (GSIM_LOG_LEVEL $<IF:$<CONFIG:Debug>,DEBUG,INFO>)
    message(STATUS "Setting GSIM_LOG_LEVEL to according to build type")
endif()

target_compile_definitions(logger INTERFACE SPDLOG_ACTIVE_LEVEL=SPDGSIM_LOG_LEVEL_${GSIM_LOG_LEVEL})
